--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.apps.com.sistempakar.MainActivity">
+    tools:context="com.example.apps.com.sistempakar2.MainActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
