--- a/app/src/main/res/layout/activity_data_diri.xml
+++ b/app/src/main/res/layout/activity_data_diri.xml
@@ -4,75 +4,101 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".DataDiriActivity">
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:text="Data Diri"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="5dp"
-            android:textColor="#000"
-            android:layout_height="wrap_content" />
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            app:hintEnabled="true"
-            android:layout_height="wrap_content">
-            <EditText
-                android:layout_width="match_parent"
-                android:hint="Nama"
-                android:typeface="normal"
-                android:inputType="text"
-                android:id="@+id/nama"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            app:hintEnabled="true"
-            android:layout_height="wrap_content">
-            <EditText
-                android:layout_width="match_parent"
-                android:hint="Umur"
-                android:typeface="normal"
-                android:inputType="number"
-                android:id="@+id/umur"
-                android:layout_height="wrap_content" />
-        </android.support.design.widget.TextInputLayout>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:text="Jenis Kelamin"
-            android:textSize="16sp"
-            android:layout_height="wrap_content" />
-        <RadioGroup
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
+            android:layout_gravity="center_vertical"
             android:layout_height="wrap_content">
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:id="@+id/lakilaki"
-                android:text="Laki-laki"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:text="PROFIL"
+                    android:textStyle="bold"
+
+                    android:textAlignment="center"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginStart="5dp"
+                    android:textColor="#fff"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:hint="Nama"
+                    android:drawableStart="@drawable/ic_action_account_box"
+                    android:drawablePadding="10dp"
+                    android:background="@drawable/border"
+                    android:typeface="normal"
+                    android:textColor="#ddd"
+                    android:textColorHint="#ddd"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:id="@+id/nama"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:hint="Umur"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border"
+                    android:padding="10dp"
+                    android:typeface="normal"
+                    android:textColor="#ddd"
+                    android:textColorHint="#ddd"
+                    android:inputType="number"
+                    android:id="@+id/umur"
+                    android:drawableStart="@drawable/ic_action_recent_actors"
+                    android:drawablePadding="10dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:text="Jenis Kelamin"
+                    android:textColor="#fff"
+                    android:textSize="16sp"
+                    android:layout_height="wrap_content" />
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:id="@+id/lakilaki"
+                        android:layout_marginEnd="10dp"
+                        android:text="Laki-laki"
+                        android:textColor="#fff"
+                        android:layout_height="wrap_content" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:id="@+id/perempuan"
+                        android:text="Perempuan"
+                        android:textColor="#fff"
+                        android:layout_height="wrap_content" />
+                </RadioGroup>
+            </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_margin="10dp"
+                android:id="@+id/next"
+                android:drawableStart="@drawable/ic_action_queue_play_next"
+                android:background="@color/colorPrimaryDark"
+                android:paddingStart="10dp"
+                android:textColor="#fff"
+                android:text="Lanjutkan"
                 android:layout_height="wrap_content" />
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:id="@+id/perempuan"
-                android:text="Perempuan"
-                android:layout_height="wrap_content" />
-        </RadioGroup>
-    </LinearLayout>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:id="@+id/next"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="#fff"
-        android:text="Lanjutkan"
-        android:layout_height="wrap_content" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
 </LinearLayout>
