--- a/app/src/main/res/layout/activity_hasil_diagnosa.xml
+++ b/app/src/main/res/layout/activity_hasil_diagnosa.xml
@@ -501,6 +501,35 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content">
+                <Button
+                    android:layout_width="150dp"
+                    android:layout_alignParentStart="true"
+                    android:text="Ulangi Diagnosa"
+                    android:id="@+id/ulangi"
+                    android:background="@color/colorPrimary"
+                    android:textColor="#fff"
+                    android:padding="10dp"
+                    android:textAllCaps="false"
+                    android:layout_marginStart="10dp"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:layout_width="150dp"
+                    android:layout_alignParentEnd="true"
+                    android:text="Keluar"
+                    android:id="@+id/keluar"
+                    android:background="@color/colorPrimary"
+                    android:textColor="#fff"
+                    android:layout_marginEnd="10dp"
+                    android:padding="10dp"
+                    android:textAllCaps="false"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
